# guardgo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_ANALYSIS.md  QUICK_START.md  README.md  SECURITY.md  angular.json  changelog  codacy.yml  docker-compose-production.yml  docker-compose.local.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  env  package.json  production.sh  pyproject.toml  pyrightconfig.json  run.sh
backend/: cronjobs.py  interface.py  main.py  requirements.txt
client/: .stylelintignore  .stylelintrc.json  angular.json  cypress.config.ts  package-lock.json  package.json  post-build.js  proxy.conf.json  proxy.local.conf.json  tailwind.config.js  tsconfig.app.json  webpack.config.js  webpack.instrument.js
dockerFiles/: .dockerignore  api_docker
docs/: README.md  application-functional-requirements.md  attendance-flow-strict-uat-script.md  client-request-broadcast-lifecycle.md  client-request-lifecycle-demo-guide.md  client-request-lifecycle-ux-guide.md  deploy-manual.md  distance-unit-contract.md  google-maps-geo-integration-plan.md  google-maps-integration-plan.md  guard-leave-quota-and-payout-execution-plan.md  invoicing-settlement-reporting-backend-contract.md  invoicing-settlement-reporting-implementation-plan.md  request-broadcast-backend-contract.md  request-broadcast-implementation-plan.md  request-fulfillment-phases.md  request-lifecycle-end-to-end-qa-plan.md  request-shift-operations-backend-contract.md  request-shift-operations-implementation-plan.md  (+3 more)
(+460 files in other folders)
