[tool.poetry]
name = "orion-intelligence"
version = "1.0.3.0"
migration_version = "1.0.3.0"
description = "Orion Platform: A web-based OSINT solution integrating search, crawling, and data aggregation."
authors = ["Abdul Mannan <msmannan00@gmail.com>"]
license = "MIT"
homepage = "https://orion.genesistechnologies.org/"
repository = "https://github.com/msmannan00/Orion-Intelligence"
documentation = "https://orion-search.readthedocs.io/en/latest/"
readme = "https://orion-search.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.115.8"
starlette = "~0.45.3"
pydantic = "~2.10.6"
stopwords = "1.0.0"
python-dotenv = "1.0.0"
elasticsearch = "~8.17.1"
termcolor = "2.3.0"
redis = "5.1.1"
motor = "3.7.0"
brotli-asgi = "1.4.0"
aiohttp = "3.11.11"
uvicorn = "0.34.0"
httpx = "0.28.1"
gunicorn = "23.0.0"
odmantic = "~1.0.2"
starlette-admin = "0.14.1"
email-validator = "2.2.0"
pymongo = "~4.11"
passlib = "~1.7.4"
PyJWT = "~2.10.1"